--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux-thunk": "2.3.0",
     "semantic-ui-css-offline": "1.0.4-2.4.2",
     "semantic-ui-react": "0.88.0",
+    "sshpk": "1.16.1",
     "superagent": "5.1.0",
     "superagent-jsonp": "0.2.1",
     "superagent-promise": "1.1.0"
